--- a/default_config.yml
+++ b/default_config.yml
@@ -96,7 +96,25 @@ train_ms:
   keep_ckpts: 8
 
 
-# webui webui配置
+# api 配置
+# 注意， “:” 后需要加空格
+api:
+  # 推理设备
+  device: "cuda"
+  # 模型路径
+  model: "models/G_27000.pth"
+  # 配置文件路径
+  config_path: "models/config.json"
+  # 音频url
+  url: "http://127.0.0.1:6006"
+  # 端口号
+  port: 6006
+  # 是否开启debug模式
+  debug: false
+  # 语种识别库，可选langid, fastlid
+  language_identification_library: "langid"
+
+# webui 配置
 # 注意， “:” 后需要加空格
 webui:
   # 推理设备
@@ -107,13 +125,10 @@ webui:
   config_path: "config.json"
   # 端口号
   port: 7860
-  # 是否公开部署，对外网开放
-  share: false
   # 是否开启debug模式
   debug: false
   # 语种识别库，可选langid, fastlid
   language_identification_library: "langid"
-
 
 # server-fastapi配置
 # 注意， “:” 后需要加空格
